--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "html-react-parser": "^1.2.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "^11.0.0",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -18,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-linkify": "*",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9"
