--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 NEXT_PUBLIC_APP_NAME=CoinHippo
 NEXT_PUBLIC_REQUESTER_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/requester
 NEXT_PUBLIC_API_FEEDS_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/feeds
+NEXT_PUBLIC_API_BLOGS_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/blogs
 NEXT_PUBLIC_SITE_URL=https://coinhippo.io
 NEXT_PUBLIC_DEFAULT_TITLE=CoinHippo | Today's Cryptocurrency Prices & Market Capitalization
 NEXT_PUBLIC_DEFAULT_DESCRIPTION=See current top coins by market cap, leading exchange by confidences, trending search, DeFi, DEX, Futures Derivatives, and other exciting information in #crypto world.
 NEXT_PUBLIC_FOOTER_DESCRIPTION=CoinHippo provides today's cryptocurrency prices, charts, value converter, market capitalization in a clean and unique place for FREE. We do believe that updated information in the cryptocurrency movement should be easily accessible to everyone. That's how things should be in our modern world 😉.
-NEXT_PUBLIC_TWITTER_NAME=coinhippoHQ
-NEXT_PUBLIC_TELEGRAM_NAME=CoinHippoChannel
+NEXT_PUBLIC_TWITTER_USERNAME=coinhippoHQ
+NEXT_PUBLIC_TELEGRAM_USERNAME=CoinHippoChannel
+NEXT_PUBLIC_AWS_S3_URL=https://s3.amazonaws.com
+NEXT_PUBLIC_AWS_S3_BUCKET=assets.coinhippo.io
