--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-linkify": "*",
     "react-redux": "^7.2.4",
+    "react-stack-grid": "^0.7.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9"
   },
