--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_APP_NAME=CoinHippo
 NEXT_PUBLIC_REQUESTER_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/requester
-NEXT_PUBLIC_API_FEEDS_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/feeds
+NEXT_PUBLIC_API_FEEDS_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/feeds
 NEXT_PUBLIC_API_BLOGS_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/blogs
 NEXT_PUBLIC_SITE_URL=https://coinhippo.io
 NEXT_PUBLIC_DEFAULT_TITLE=CoinHippo | Today's Cryptocurrency Prices & Market Capitalization
