--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-linkify": "*",
+    "react-page-visibility": "^6.4.0",
     "react-redux": "^7.2.4",
     "react-stack-grid": "^0.7.1",
+    "react-ticker": "^1.2.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9"
   },
