--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-page-visibility": "^6.4.0",
     "react-redux": "^7.2.4",
     "react-stack-grid": "^0.7.1",
+    "react-table": "^7.7.0",
     "react-ticker": "^1.2.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9"
