--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-circle": "^1.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-linkify": "*",
