--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "aws s3 sync build/ s3://v2.coinhippo.io --acl public-read"
   },
   "dependencies": {
     "html-react-parser": "^1.2.7",
@@ -20,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-circle": "^1.1.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-linkify": "*",
