--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_APP_NAME=CoinHippo
 NEXT_PUBLIC_REQUESTER_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/requester
 NEXT_PUBLIC_API_BLOGS_URL=https://yivbr6i51h.execute-api.us-east-1.amazonaws.com/default/blogs
+NEXT_PUBLIC_IMAGE_OPTIMIZER_URL=https://d1s9h0sp0r86tn.cloudfront.net/_next/image
 NEXT_PUBLIC_SITE_URL=https://coinhippo.io
 NEXT_PUBLIC_DEFAULT_TITLE=CoinHippo | Today's Cryptocurrency Prices & Market Capitalization
 NEXT_PUBLIC_DEFAULT_DESCRIPTION=See current top coins by market cap, leading exchange by confidences, trending search, DeFi, DEX, Futures Derivatives, and other exciting information in #crypto world.
