--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "deploy": "aws s3 sync build/ s3://v2.coinhippo.io --acl public-read"
+    "build": "next build && next export",
+    "deploy": "aws s3 sync out/ s3://v2.coinhippo.io --acl public-read"
   },
   "dependencies": {
     "html-react-parser": "^1.2.7",
@@ -39,6 +39,6 @@
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
     "postcss-color-function": "^4.1.0",
-    "tailwindcss": "^2.2.5"
+    "tailwindcss": "^2.2.7"
   }
 }
