--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-circle": "^1.1.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
     "react-linkify": "*",
     "react-page-visibility": "^6.4.0",
