--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
+    "react-image": "^4.0.3",
     "react-linkify": "*",
     "react-page-visibility": "^6.4.0",
     "react-redux": "^7.2.4",
+    "react-slick": "^0.28.1",
     "react-stack-grid": "^0.7.1",
     "react-table": "^7.7.0",
     "react-ticker": "^1.2.2",
     "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "slick-carousel": "^1.8.1",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.3",
