--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "17.0.2",
     "react-circle": "^1.1.1",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
     "react-image": "^4.0.3",
@@ -36,6 +36,7 @@
     "react-ticker": "^1.2.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "video-react": "^0.14.1"
   },
