--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ NEXT_PUBLIC_TWITTER_USERNAME=coinhippoHQ
 NEXT_PUBLIC_TELEGRAM_USERNAME=CoinHippoChannel
 NEXT_PUBLIC_AWS_S3_URL=https://s3.amazonaws.com
 NEXT_PUBLIC_AWS_S3_BUCKET=assets.coinhippo.io
+NEXT_PUBLIC_GA_TRACKING_ID=G-YXDXVJ3CP2
